adding tree and index files for html export

--- a/socket programming/stream sockets/page.html
+++ b/socket programming/stream sockets/page.html
@@ -1,23 +1,22 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'  'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'><html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <title>Stream Sockets</title>
-</head><body>Stream sockets connection is an example of a phone call between <br/>
-2 persons.<br/>
+</head><body><span style="font-size:40px;">Stream sockets connection is an example of a phone call between <br/>
+<span style="font-size:40px;">2 persons.<br/>
 <br/>
-Usually Stream Sockets are referenced as either Active or Passive:<br/>
+<span style="font-size:40px;">Usually Stream Sockets are referenced as either <span style="color: #0000ff;">Active</span> or <span style="color: #0000ff;">Passive</span>:<br/>
 <br/>
-<img src="screenshot.png" /><br/>
+<img src="screenshot.png"/><br/>
 <br/>
-Stream socket flow chart:<br/>
+<span style="font-size:40px;">Stream socket <span style="color: #ff0000;">flow chart</span>:<br/>
 <br/>
-<img src="screenshot 2.png" /><br/>
+<img src="screenshot 2.png"/><br/>
 <br/>
-depending on the number specified in the backlog the connect can block or get<br/>
-accepted. if the socket is busy.<br/>
+<span style="font-size:40px;">depending on the number specified in the backlog the connect can block or get<br/>
+<span style="font-size:40px;">accepted. if the socket is busy.<br/>
 <br/>
-<img src="screenshot 3.png" /><br/>
+<img src="screenshot 3.png"/><br/>
 <br/>
 <br/>
 </body></html>
