--- a/socket programming/datagram sockets/page.html
+++ b/socket programming/datagram sockets/page.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'  'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'><html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <title>Datagram Sockets</title>
-</head><body>Flow chart for Datagram sockets connection:<br/>
+</head><body><span style="font-size:40px;"><span style="color: #ff0000;">Flow chart</span> for Datagram sockets connection:<br/>
 <br/>
-<img src="screenshot.png" /><br/>
+<img src="screenshot.png"/><br/>
 <br/>
-<span style="color: #007f00">sendto( )</span>&nbsp;&amp; <span style="color: #007f00">recvfrom( )<br/>
-</span><span style="color: #007f00"><br/>
-</span><img src="screenshot 2.png" /></body></html>
+<span style="color: #007f00;font-size:40px;">sendto( ) </span>&amp; <span style="color: #007f00;font-size:40px;"> recvfrom( )<br/>
+</span><span style="color: #007f00;font-size:40px;"><br/>
+</span><img src="screenshot 2.png"/></body></html>
