--- a/socket programming/overview/page.html
+++ b/socket programming/overview/page.html
@@ -1,32 +1,34 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'  'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'><html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <title>Overview</title>
-</head><body><br/>
-In order to <span style="color: #ff0000">create a new Socket<br/>
+</head><body><span style="color: #007f00;font-size:40px;">Linux Motivation in Automotive</span><div style="text-align: left"><ul><span style="color: #0000ff;font-size:40px;"><li style="list-style-type: none"/>
+</span></ul>
+<span style="color: #000000;font-size:40px;">Automotive Grade Linux (</span><span style="color: #0000ff;font-size:40px;">AGL</span><span style="color: #000000;font-size:40px;">)</span><br/>
+</div><br/>
+<span style="font-size:40px;">In order to <span style="color: #ff0000;font-size:40px;">create a new Socket<br/>
 </span><br/>
-<img src="screenshot.png" /><br/>
+<img src="screenshot.png"/><br/>
 <br/>
-fd Stands for file descriptor which is a pointer to this socket that you are creating.<br/>
-<span style="color: #000000">protocol will always set to zero through this book</span><br/>
+<span style="font-size:40px;">fd Stands for file descriptor which is a pointer to this socket that you are creating.<br/>
+<span style="color: #000000;font-size:40px;">protocol will always set to zero through this book</span><br/>
 <br/>
-<span style="color: #ff0000">3</span>&nbsp;different types of sockets domains:<br/>
+<span style="color: #ff0000;font-size:40px;">3 </span>different types of sockets domains:<br/>
 <br/>
-<img src="screenshot 2.png" /><br/>
+<img src="screenshot 2.png"/><br/>
 <br/>
-AF stands for Address Family<br/>
+<span style="font-size:40px;">AF stands for Address Family<br/>
 <br/>
-For the second paramter the socket types their are 2 types of socket Stream and Datagram.<br/>
+<span style="font-size:40px;">For the second paramter the socket types their are 2 types of socket Stream and Datagram.<br/>
 <br/>
-<img src="screenshot 3.png" /><br/>
+<img src="screenshot 3.png"/><br/>
 <br/>
-Stream sockets(<span style="color: #0000ff">SOCK_STREAM</span>)<br/>
+<span style="font-size:40px;">Stream sockets(<span style="color: #0000ff;font-size:40px;">SOCK_STREAM</span>)<br/>
 <br/>
-<img src="screenshot 4.png" /><br/>
+<img src="screenshot 4.png"/><br/>
 <br/>
-Datagram sockets(<span style="color: #0000ff">SOCK_DGRAM</span>)<br/>
+<span style="font-size:40px;">Datagram sockets(<span style="color: #0000ff;font-size:40px;">SOCK_DGRAM</span>)<br/>
 <br/>
-<img src="screenshot 5.png" /><br/>
+<img src="screenshot 5.png"/><br/>
 <br/>
 </body></html>
