--- a/socket programming/socket sys calls/page.html
+++ b/socket programming/socket sys calls/page.html
@@ -1,37 +1,36 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html  PUBLIC '-//W3C//DTD XHTML 1.0 Transitional//EN'  'http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd'><html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
 <title>Socket Sys Calls</title>
-</head><body><span style="color: #ff0000">5</span>&nbsp;Fundemntal Sys Calls for Sockets programming<br/>
+</head><body><span style="color: #ff0000;font-size:40px;">5 </span><span style="font-size:40px;">Fundemntal Sys Calls for Sockets programming<br/>
 <br/>
-<img src="screenshot.png" /><br/>
+<img src="screenshot.png"/><br/>
 <br/>
-<span style="color: #007f00">socket( )</span><span style="color: #0000ff"><br/>
+<span style="color: #007f00;font-size:40px;">socket( )</span><span style="color: #0000ff;font-size:40px;"><br/>
 </span><br/>
-<img src="screenshot 2.png" /><br/>
+<img src="screenshot 2.png"/><br/>
 <br/>
-<span style="color: #007f00">bind( )<br/>
+<span style="color: #007f00;font-size:40px;">bind( )<br/>
 <br/>
-</span><img src="screenshot 3.png" /><span style="color: #007f00"><br/>
-</span><span style="color: #007f00"><img src="screenshot 4.png" /><br/>
+</span><img src="screenshot 3.png"/><span style="color: #007f00;font-size:40px;"><br/>
+</span><span style="color: #007f00;font-size:40px;"><img src="screenshot 4.png"/><br/>
 <br/>
-listen( )<br/>
+<span style="font-size:40px;">listen( )<br/>
 <br/>
-<img src="screenshot 5.png" /><br/>
+<img src="screenshot 5.png"/><br/>
 <br/>
-</span><span style="color: #000000">backlog is the max number of pending connections to be accepted.<br/>
+</span><span style="color: #000000;font-size:40px;">backlog is the max number of pending connections to be accepted.<br/>
 <br/>
-</span><span style="color: #007f00">accept( )<br/>
+</span><span style="color: #007f00;font-size:40px;">accept( )<br/>
 <br/>
-<img src="screenshot 6.png" /><br/>
+<img src="screenshot 6.png"/><br/>
 <br/>
-</span><span style="color: #000000">The idea with accept is that it creates a new socket each time to accept this connection <br/>
-</span><span style="color: #000000">the remaining arguments are pointers to receive the addr of the peer connection.</span><span style="color: #007f00"><br/>
-</span><span style="color: #007f00"><br/>
-connect( )<br/>
+</span><span style="color: #000000;font-size:40px;">The idea with accept is that it creates a new socket each time to accept this connection <br/>
+</span><span style="color: #000000;font-size:40px;">the remaining arguments are pointers to receive the addr of the peer connection.</span><span style="color: #007f00;font-size:40px;"><br/>
+</span><span style="color: #007f00;font-size:40px;"><br/>
+<span style="font-size:40px;">connect( )<br/>
 <br/>
-<img src="screenshot 7.png" /><br/>
+<img src="screenshot 7.png"/><br/>
 <br/>
 <br/>
 </span></body></html>
